--- a/documentation/charset.html
+++ b/documentation/charset.html
@@ -16,11 +16,12 @@
     </header>
     <p>This font supports over 2,400 characters from <a
     href="https://unicode.org/">The Unicode Standard</a> as well as a
-    number of <a href="https://github.com/silnrsi/silpua">Private Use
-    Area (PUA)</a> characters. In total, over 3,800 glyphs are included,
-    supporting stylistic alternates for a number of characters as well
-    as a large number of ligated sequences (e.g., contour tone letters
-    used in phonetic transcription of tonal languages).</p>
+    number of <a
+    href="https://github.com/silnrsi/unicode-resources/tree/main/sil-pua">Private
+    Use Area (PUA)</a> characters. In total, over 3,800 glyphs are
+    included, supporting stylistic alternates for a number of characters
+    as well as a large number of ligated sequences (e.g., contour tone
+    letters used in phonetic transcription of tonal languages).</p>
     <h2 id="supported-characters">Supported characters</h2>
     <p>The following character ranges are supported by this font:</p>
     <table>
@@ -83,68 +84,76 @@
     <td>U+1AB0..U+1ABA. U+1ABF..U+1AC0, U+1AC6..U+1ACE</td>
     </tr>
     <tr class="even">
+    <td>Cyrillic Extended-C</td>
+    <td>U+1C89..U+1C8A</td>
+    </tr>
+    <tr class="odd">
     <td>Phonetic Extensions*</td>
     <td>U+1D00..U+1D7F</td>
     </tr>
-    <tr class="odd">
+    <tr class="even">
     <td>Phonetic Extensions Supplement*</td>
     <td>U+1D80..U+1DBF</td>
     </tr>
-    <tr class="even">
+    <tr class="odd">
     <td>Combining Diacritical Marks Supplement</td>
     <td>U+1DC2, U+1DC4..U+1DCD, U+1DDA, U+1DDC, U+1DF5,
     U+1DFC..U+1DFF</td>
     </tr>
-    <tr class="odd">
+    <tr class="even">
     <td>Latin Extended Additional*</td>
     <td>U+1E00..U+1EFF</td>
     </tr>
-    <tr class="even">
+    <tr class="odd">
     <td>General Punctuation</td>
     <td>U+2000..U+2042, U+2044, U+204A, U+2053, U+2057, U+2060..U+2063,
     U+206A..U+206F</td>
     </tr>
-    <tr class="odd">
+    <tr class="even">
     <td>Superscripts and Subscripts*</td>
     <td>U+2070..U+2071, U+2074..U+208E, U+2090..U+209C</td>
     </tr>
-    <tr class="even">
+    <tr class="odd">
     <td>Currency Symbols*</td>
     <td>U+20A0..U+20C0</td>
     </tr>
-    <tr class="odd">
+    <tr class="even">
     <td>Combining Diacritical Marks for Symbols</td>
     <td>U+20E5, U+20EC..U+20EF</td>
     </tr>
-    <tr class="even">
+    <tr class="odd">
     <td>Letterlike Symbols</td>
     <td>U+210C, U+2113, U+2116..U+2117, U+211F, U+2122..U+2123, U+2126,
     U+212D, U+2135, U+214F</td>
     </tr>
-    <tr class="odd">
+    <tr class="even">
     <td>Number Forms*</td>
     <td>U+2150..U+218B</td>
     </tr>
-    <tr class="even">
+    <tr class="odd">
     <td>Arrows</td>
-    <td>U+2190..U+219B, U+21A8, U+21B6..U+21B7, U+21Ba..U+21BB,
+    <td>U+2190..U+219B, U+21A8, U+21AE, U+21B6..U+21B7, U+21BA..U+21BB,
     U+21D0..U+21D5</td>
     </tr>
-    <tr class="odd">
+    <tr class="even">
     <td>Mathematical Operators</td>
     <td>U+2202..U+2206, U+220F, U+2211..U+2213, U+2215, U+2219..U+221A,
     U+221E, U+2221, U+2225..U+2228, U+222B, U+2234..U+2235, U+223C,
     U+2248, U+225F, U+2260..U+2262, U+2264..U+2265, U+226E..U+226F,
-    U+U+2282..U+2287</td>
-    </tr>
-    <tr class="even">
-    <td>Miscellaneous Technical</td>
-    <td>U+2308..U+230B, U+2318, U+231C..U+231F, U+2329..U+232A,
-    U+239B..U+23AD</td>
+    U+U+2282..U+2287, U+22BB..U+22BD</td>
     </tr>
     <tr class="odd">
+    <td>Miscellaneous Technical</td>
+    <td>U+2308..U+230B, U+2318, U+231C..U+231F, U+2329..U+232A,
+    U+239B..U+23AD, U+23D1..U+23D6</td>
+    </tr>
+    <tr class="even">
     <td>Control Pictures</td>
     <td>U+2423</td>
+    </tr>
+    <tr class="odd">
+    <td>Enclosed Alphanumerics</td>
+    <td>U+24B6, U+24D0</td>
     </tr>
     <tr class="even">
     <td>Geometric Shapes</td>
@@ -161,7 +170,7 @@
     </tr>
     <tr class="odd">
     <td>Misc. Math. Symbols-A</td>
-    <td>U+27C2, U+27E6..U+27E9</td>
+    <td>U+27C2, U+27E6..U+27EB</td>
     </tr>
     <tr class="even">
     <td>Misc. Math. Symbols-B</td>
@@ -177,90 +186,94 @@
     </tr>
     <tr class="odd">
     <td>Coptic</td>
-    <td>U+2C88</td>
+    <td>U+2C88..U+2C89</td>
     </tr>
     <tr class="even">
     <td>Supplemental Punctuation</td>
-    <td>U+2E00..U+2E0D, U+2E13, U+2E14, U+2E17, U+2E22..U+2E25,
-    U+2E3A..U+2E3B, U+2E3E</td>
+    <td>U+2E00..U+2E0D, U+2E13..U+2E15, U+2E17, U+2E22..U+2E25,
+    U+2E28..U+2E29, U+2E3A..U+2E3B, U+2E3D..U+2E3E</td>
     </tr>
     <tr class="odd">
+    <td>Cyrillic Extended-B</td>
+    <td>U+A69C..U+A69D</td>
+    </tr>
+    <tr class="even">
     <td>Modifier Tone Letters*</td>
     <td>U+A700..U+A71F</td>
     </tr>
-    <tr class="even">
-    <td>Latin Extended-D</td>
-    <td>U+A720..U+A799, U+A7A0..U+A7AF, U+A7B0..U+A7BF, U+A7C4..U+A7CA,
-    U+A7F2..U+A7F4, U+A7F7..U+A7FF</td>
-    </tr>
     <tr class="odd">
+    <td>Latin Extended-D</td>
+    <td>U+A720..U+A799, U+A7A0..U+A7AF, U+A7B0..U+A7BF, U+A7C4..U+A7CD,
+    U+A7DA..U+A7DC, U+A7F2..U+A7F4, U+A7F7..U+A7FF</td>
+    </tr>
+    <tr class="even">
     <td>Kayah Li</td>
     <td>U+A92E</td>
     </tr>
-    <tr class="even">
+    <tr class="odd">
     <td>Latin Extended-E</td>
     <td>U+AB30, U+AB53, U+AB5C, U+AB5E, U+AB64..U+AB6B</td>
     </tr>
-    <tr class="odd">
+    <tr class="even">
     <td>PUA: Specials</td>
     <td>U+F130..U+F133</td>
     </tr>
-    <tr class="even">
+    <tr class="odd">
     <td>PUA: Modifier letters (e.g. superscripts)</td>
     <td>U+F1A1, U+F1A3..U+F1A4, U+F1AB, U+F1AE, U+F1B4..U+F1B5, U+F1BC,
     U+F1CD..U+F1CE, U+F1F1..U+F1F9</td>
     </tr>
-    <tr class="odd">
+    <tr class="even">
     <td>PUA: Latin</td>
     <td>U+F20D, U+F234..U+F235, U+F258..U+F259, U+F267..U+F269,
     U+F26C..U+F26D</td>
     </tr>
-    <tr class="even">
+    <tr class="odd">
     <td>PUA: Cyrillic</td>
     <td>U+F326..U+F327</td>
     </tr>
-    <tr class="odd">
+    <tr class="even">
     <td>Alphabetic Presentation Forms</td>
     <td>U+FB00..U+FB04</td>
     </tr>
-    <tr class="even">
+    <tr class="odd">
     <td>Variation Selectors*</td>
     <td>U+FE00..U+FE0F</td>
     </tr>
-    <tr class="odd">
+    <tr class="even">
     <td>Combining Half Marks</td>
     <td>U+FE20..U+FE23</td>
     </tr>
-    <tr class="even">
+    <tr class="odd">
     <td>Arabic Presentation Forms-B</td>
     <td>U+FEFF (zero-width no-break space)</td>
     </tr>
-    <tr class="odd">
+    <tr class="even">
     <td>Specials*</td>
     <td>U+FFF9..U+FFFD</td>
     </tr>
-    <tr class="even">
+    <tr class="odd">
     <td>Latin Extended-F*</td>
     <td>U+10780..U+10785, U+10787..U+107B0, U+107B2..U+107BA</td>
     </tr>
-    <tr class="odd">
+    <tr class="even">
     <td>Mathematical Alphanumeric Symbols</td>
     <td>U+1D40C, U+1D504..U+1D505, U+1D50A, U+1D50E..U+1D510,
     U+1D513..U+1D514, U+1D516..U+1D517, U+1D519</td>
     </tr>
-    <tr class="even">
+    <tr class="odd">
     <td>Latin Extended-G*</td>
     <td>U+1DF00..U+1DF1E, U+1DF25..U+1DF2A</td>
     </tr>
-    <tr class="odd">
+    <tr class="even">
     <td>Cyrillic Extended-D</td>
     <td>U+1E030..U+1E049, U+1E04B..U+1E06B, U+1E06D, U+1E06F</td>
     </tr>
-    <tr class="even">
+    <tr class="odd">
     <td>Enclosed Alphanumeric Supplement</td>
     <td>U+1F12F</td>
     </tr>
-    <tr class="odd">
+    <tr class="even">
     <td>Emoticons</td>
     <td>U+1F610</td>
     </tr>
@@ -271,9 +284,9 @@
     characters</h2>
     <p>There are a number of private-use characters that are supported
     in this font. These conform to <a
-    href="https://scripts.sil.org/PUA_home">SIL Global’s corporate
-    registry</a> for usage of the Unicode private-use areas. Characters
-    which are not yet in Unicode are shown below.</p>
+    href="https://github.com/silnrsi/unicode-resources/tree/main/sil-pua">SIL
+    Global’s corporate registry</a> for usage of the Unicode private-use
+    areas. Characters which are not yet in Unicode are shown below.</p>
     <h3 id="specials">Specials</h3>
     <ul>
     <li>U+F130 FONT BASELINE AND SIDE-BEARING MARKER LEFT</li>
@@ -291,7 +304,6 @@
     <li>U+F258 LATIN LETTER SMALL CAPITAL I OVER SMALL SCHWA</li>
     <li>U+F259 LATIN LETTER SMALL UPSILON OVER SMALL SCHWA</li>
     <li>U+F26D LATIN SMALL LETTER B WITH LEFT HOOK</li>
-    <li>U+F26E LATIN CAPITAL LETTER RAMS HORN</li>
     </ul>
     <h3 id="cyrillic">Cyrillic</h3>
     <ul>
