--- a/documentation/history.html
+++ b/documentation/history.html
@@ -14,6 +14,172 @@
     <header>
         <h1 class="title">Doulos SIL - Version History</h1>
     </header>
+    <h3 id="n-jan-2025-sil-wstech-team-doulos-sil-version-7.000">N Jan
+    2025 (SIL WSTech Team) Doulos SIL version 7.000</h3>
+    <p><strong><em>Note that this may be the final major version of
+    Doulos SIL. Please consider switching to one of our other font
+    families.</em></strong></p>
+    <h4 id="fewer-alternate-font-versions">Fewer alternate font
+    versions</h4>
+    <ul>
+    <li><p>There is no longer a <em>Compact</em> variant. A
+    <em>Compact</em> version of the v6.2 font remains available from
+    https://software.sil.org/lcgfonts/download/</p></li>
+    <li><p>TypeTuner Web no longer offers line spacing alternatives for
+    the v7 font (Normal, Tight, Loose). If you need Tight or Loose
+    variants the v6.2 font s available and supports line spacing
+    alternatives.</p></li>
+    <li><p>There are no ‘pre-tuned’ regional or <em>Literacy</em>
+    special-purpose modified variants. The v6.2 variants, including a
+    <em>Literacy</em> version, remains available from
+    https://software.sil.org/lcgfonts/download/. You can still manually
+    create v7 variants with TypeTuner Web that include literacy forms
+    and other alternatives.</p></li>
+    </ul>
+    <h4 id="feature-enhancements">Feature enhancements</h4>
+    <ul>
+    <li>Additions to Modifier Apostrophe feature (<code>cv70</code>)
+    <ul>
+    <li>U+0312 COMBINING TURNED COMMA ABOVE</li>
+    <li>U+0314 COMBINING REVERSED COMMA ABOVE</li>
+    </ul></li>
+    <li>Addition to Rams Horn feature (<code>cv25</code>)
+    <ul>
+    <li>U+10791 MODIFIER LETTER SMALL RAMS HORN</li>
+    </ul></li>
+    <li>Small caps added for these parentheses and brackets
+    <ul>
+    <li>U+0028 LEFT PARENTHESIS</li>
+    <li>U+0029 RIGHT PARENTHESIS</li>
+    <li>U+005B LEFT SQUARE BRACKET</li>
+    <li>U+005D RIGHT SQUARE BRACKET</li>
+    <li>U+007B LEFT CURLY BRACKET</li>
+    <li>U+007D RIGHT CURLY BRACKET</li>
+    </ul></li>
+    </ul>
+    <h4 id="new-character-support">New character support</h4>
+    <ul>
+    <li>Unicode 16 additions
+    <ul>
+    <li>U+1C89 CYRILLIC CAPITAL LETTER TJE</li>
+    <li>U+1C8A CYRILLIC SMALL LETTER TJE</li>
+    <li>U+A7CB LATIN CAPITAL LETTER RAMS HORN
+    <ul>
+    <li>This was previously in the SIL PUA (U+F26E)</li>
+    </ul></li>
+    <li>U+A7CC LATIN CAPITAL LETTER S WITH DIAGONAL STROKE</li>
+    <li>U+A7CD LATIN SMALL LETTER S WITH DIAGONAL STROKE</li>
+    <li>U+A7DA LATIN CAPITAL LETTER LAMBDA</li>
+    <li>U+A7DB LATIN SMALL LETTER LAMBDA</li>
+    <li>U+A7DC LATIN CAPITAL LETTER LAMBDA WITH STROKE</li>
+    </ul></li>
+    <li>Orthographic at signs
+    <ul>
+    <li>U+24B6 CIRCLED LATIN CAPITAL LETTER A</li>
+    <li>U+24D0 CIRCLED LATIN SMALL LETTER A</li>
+    </ul></li>
+    <li>Additional Cyrillic modifiers
+    <ul>
+    <li>U+A69C MODIFIER LETTER CYRILLIC HARD SIGN</li>
+    <li>U+A69D MODIFIER LETTER CYRILLIC SOFT SIGN</li>
+    </ul></li>
+    <li>Case mapping for Coptic eie
+    <ul>
+    <li>U+2C89 COPTIC SMALL LETTER EIE</li>
+    </ul></li>
+    <li>Upwards ancora (and revised downwards form)
+    <ul>
+    <li>U+2E14 DOWNWARDS ANCORA</li>
+    <li>U+2E15 UPWARDS ANCORA</li>
+    </ul></li>
+    <li>Prosodic symbols
+    <ul>
+    <li>U+23D1 METRICAL BREVE</li>
+    <li>U+23D2 METRICAL LONG OVER SHORT</li>
+    <li>U+23D3 METRICAL SHORT OVER LONG</li>
+    <li>U+23D4 METRICAL LONG OVER TWO SHORTS</li>
+    <li>U+23D5 METRICAL TWO SHORTS OVER LONG</li>
+    <li>U+23D6 METRICAL TWO SHORTS JOINED</li>
+    <li>U+2E3D VERTICAL SIX DOTS</li>
+    </ul></li>
+    <li>Doubled brackets and parentheses
+    <ul>
+    <li>U+27EA MATHEMATICAL LEFT DOUBLE ANGLE BRACKET</li>
+    <li>U+27EB MATHEMATICAL RIGHT DOUBLE ANGLE BRACKET</li>
+    <li>U+2E28 LEFT DOUBLE PARENTHESIS</li>
+    <li>U+2E29 RIGHT DOUBLE PARENTHESIS</li>
+    </ul></li>
+    <li>Logical symbols
+    <ul>
+    <li>U+21AE LEFT RIGHT ARROW WITH STROKE</li>
+    <li>U+22BB XOR</li>
+    <li>U+22BC NAND</li>
+    <li>U+22BD NOR</li>
+    </ul></li>
+    </ul>
+    <h4 id="improvements-and-fixes">Improvements and fixes</h4>
+    <ul>
+    <li>Support added for complex positioning of bridging double
+    diacritics and nearby marks. Correct rendering requires a very
+    specific encoding sequence - see
+    https://software.sil.org/fonts/bridging-diacritics/
+    <ul>
+    <li>U+035C COMBINING DOUBLE BREVE BELOW</li>
+    <li>U+035D COMBINING DOUBLE BREVE</li>
+    <li>U+035E COMBINING DOUBLE MACRON</li>
+    <li>U+035F COMBINING DOUBLE MACRON BELOW</li>
+    <li>U+0360 COMBINING DOUBLE TILDE</li>
+    <li>U+0361 COMBINING DOUBLE INVERTED BREVE</li>
+    <li>U+0362 COMBINING DOUBLE RIGHTWARDS ARROW BELOW</li>
+    <li>U+1DCD COMBINING DOUBLE CIRCUMFLEX ABOVE</li>
+    <li>U+1DFC COMBINING DOUBLE INVERTED BREVE BELOW</li>
+    <li>U+F17A COMBINING DOUBLE DIAERESIS (in SIL PUA)</li>
+    </ul></li>
+    <li>Fixed position of
+    <ul>
+    <li>U+1D09 LATIN SMALL LETTER TURNED I</li>
+    <li>U+1D4E MODIFIER LETTER SMALL TURNED I</li>
+    </ul></li>
+    <li>Fixed dotless form of
+    <ul>
+    <li>U+1DF1A LATIN SMALL LETTER I WITH STROKE AND RETROFLEX HOOK</li>
+    </ul></li>
+    <li>Revised design of
+    <ul>
+    <li>U+A720 MODIFIER LETTER STRESS AND HIGH TONE</li>
+    <li>U+A721 MODIFIER LETTER STRESS AND LOW TONE</li>
+    </ul></li>
+    <li>Improved design of some combining diacritics
+    <ul>
+    <li>U+032B COMBINING INVERTED DOUBLE ARCH BELOW</li>
+    <li>U+033C COMBINING SEAGULL BELOW</li>
+    <li>U+1AB7 COMBINING OPEN MARK BELOW</li>
+    <li>U+1AB8 COMBINING DOUBLE OPEN MARK BELOW</li>
+    <li>U+1AC7 COMBINING INVERTED DOUBLE ARCH ABOVE</li>
+    </ul></li>
+    <li>Revised anchors on many letters to improve diacritic
+    positioning, including these and related letters
+    <ul>
+    <li>U+004A LATIN CAPITAL LETTER J</li>
+    <li>U+0051 LATIN CAPITAL LETTER Q</li>
+    <li>U+0059 LATIN CAPITAL LETTER Y</li>
+    <li>U+0066 LATIN SMALL LETTER F</li>
+    <li>U+0069 LATIN SMALL LETTER I</li>
+    <li>U+006A LATIN SMALL LETTER J</li>
+    <li>U+0079 LATIN SMALL LETTER Y</li>
+    <li>U+0434 CYRILLIC SMALL LETTER DE</li>
+    </ul></li>
+    <li>Reviewed anchors on spacing acutes and graves
+    <ul>
+    <li>U+0060 GRAVE ACCENT</li>
+    <li>U+00B4 ACUTE ACCENT</li>
+    <li>U+02CA MODIFIER LETTER ACUTE ACCENT</li>
+    <li>U+02CB MODIFIER LETTER GRAVE ACCENT</li>
+    <li>U+02CE MODIFIER LETTER LOW GRAVE ACCENT</li>
+    <li>U+02CF MODIFIER LETTER LOW ACUTE ACCENT</li>
+    </ul></li>
+    <li>Autohinting is more consistent across the font family</li>
+    </ul>
     <h3 id="feb-2023-sil-wstech-team-doulos-sil-version-6.200">1 Feb
     2023 (SIL WSTech Team) Doulos SIL version 6.200</h3>
     <p>This release is focused on adding features and glyphs, including
@@ -43,7 +209,7 @@
     <li>Automatic fractions (frac)</li>
     </ul></li>
     </ul>
-    <h4 id="new-character-support">New character support</h4>
+    <h4 id="new-character-support-1">New character support</h4>
     <ul>
     <li>Additional click (also supported by new baseline clicks feature)
     <ul>
@@ -268,7 +434,7 @@
     <li>U+1F610 NEUTRAL FACE</li>
     </ul></li>
     </ul>
-    <h4 id="improvements-and-fixes">Improvements and fixes</h4>
+    <h4 id="improvements-and-fixes-1">Improvements and fixes</h4>
     <ul>
     <li><p>Kayan diacritics feature (cv79) now supported by TypeTuner
     Web</p></li>
