--- a/documentation/versions.html
+++ b/documentation/versions.html
@@ -36,38 +36,46 @@
     features and download a font with those features preset. This
     enables them to work in many applications that do not fully support
     OpenType.</p>
+    <h2 id="compact-versions"><em>Compact</em> versions</h2>
+    <p>Doulos SIL version 7 does not have a <em>Compact</em> variant.
+    Most users should use the version 7 font and adjust line spacing
+    explicitly within the application if necessary. If your application
+    does not allow control over line spacing, you can use the <a
+    href="https://software.sil.org/lcgfonts/download/">version 6.200
+    Doulos SIL Compact font</a>, which remains available. <strong>If you
+    need any of the new version 7 features or characters, but also need
+    them supported in a compact version please <a
+    href="https://software.sil.org/doulos/about/contact/">contact
+    us</a>.</strong></p>
     <h2 id="special-purpose-modified-variants">Special-purpose modified
     variants</h2>
-    <ul>
-    <li><a href="https://software.sil.org/lcgfonts/download/">Modified
-    versions of the fonts</a> are available that have been ‘tuned’ to
-    turn on certain features by default. These are available for some
-    regions and include <em>Literacy</em> and <em>Compact</em> versions.
-    <strong>These remain at version 6.101 and have not been updated to
-    version 6.200. They will be updated at the next major version (7).
-    If you need any of the new features or characters in this version,
-    but also need them supported in the special-purpose modified fonts,
-    please contact us.</strong></li>
-    </ul>
+    <p><a href="https://software.sil.org/lcgfonts/download/">Modified
+    versions of Doulos SIL version 6.200</a> are available that have
+    been ‘tuned’ to turn on certain features by default. These are
+    available for some regions and include <em>Literacy</em> versions.
+    <strong>These remain at version 6.200 and have not been updated to
+    Doulos SIL version 7. If you need any of the new features or
+    characters in this version, but also need them supported in the
+    special-purpose modified fonts please <a
+    href="https://software.sil.org/doulos/about/contact/">contact
+    us</a>.</strong></p>
     <h2 id="version-5-subsets">Version 5 subsets</h2>
-    <p>Special versions of Doulos SIL version 5 were created for
-    specific uses. Those fonts still work and remain available:</p>
-    <ul>
-    <li><a href="https://software.sil.org/lcgfonts/font-subsets/">Font
-    subsets</a> are limited versions of the fonts that support only the
-    characters needed for a particular area or use. Subsets are
+    <p>In the past, special <em>subset</em> versions of Doulos SIL
+    version 5 were created for specific uses. Those fonts still work and
+    <a href="https://software.sil.org/lcgfonts/font-subsets/">remain
+    available</a>. These are limited versions of the fonts that support
+    only the characters needed for a particular area or use. Subsets are
     available for Africa, Americas, Asia/Pacific, Europe/Eurasia,
     Vietnam, Phonetic, Cyrillic (Basic) and Cyrillic Extended. With the
     exception of the Phonetic font, the font subsets are intended for
     orthographic use only. We have not put anything in the other subsets
     for phonetic, transliteration, or transcription use. For those
-    purposes, use the Phonetic subset.</li>
-    </ul>
-    <p>We do not intend to update these fonts to version 6; however,
-    they should continue to work. <strong>If you have a need for any of
-    these fonts to be updated to version 6, please <a
-    href="https://software.sil.org/doulos/about/contact/">contact
-    us</a>.</strong></p>
+    purposes, use the Phonetic subset. We do not intend to update these
+    fonts, however they may still work. <strong>We do not, however,
+    recommend their use. In almost all cases the standard font is a
+    better choice. Font size is less of a concern than it was years ago,
+    particularly with improved compression technologies such as
+    woff2.</strong></p>
     <h2 id="previous-versions">Previous versions</h2>
     <p>Previous versions remain available from our <a
     href="https://software.sil.org/doulos/download/previous-versions">Previous
